--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+	overflow: auto; /* Ensures the rest of the website isn't constrained */
 }
 
 ol, ul {
@@ -184,6 +185,11 @@ input, select, textarea {
 	}
 
 /* Container */
+	#gameContainer{
+		width: 500px;
+		height: 500px;
+	}
+	
 	#gameContainer input {
 		border: 2px solid gray;
 		border-radius: 5px;
