--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -188,8 +188,9 @@ input, select, textarea {
 	#gameContainer{
 		width: 500px;
 		height: 500px;
+		overflow: hidden;
 	}
-	
+
 	#gameContainer input {
 		border: 2px solid gray;
 		border-radius: 5px;
