--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,6 +203,10 @@ input, select, textarea {
 		outline: none;
   	}
 
+	  #gameContainer .error-message {
+		text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+	  }
+
 	.container {
 		margin: 0 auto;
 		max-width: 100%;
